Started creating the start page (home)

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -20,6 +20,7 @@
 
     /* My custom colors */
     --color-blue: oklch(35.29% 0.13558 258.814);
+    --color-yellow: oklch(82.53% 0.1709 80.01);
 
     --color-card: var(--card);
     --color-card-foreground: var(--card-foreground);
